# Quotes4Days

./: .env  .gitattributes  Cargo.toml  README.md  index.md
.github/workflows/: jekyll-gh-pages.yml
docs/: index.html  script.js  search-index.js  settings.html  styles.css
docs/quotes/: fn.fetch_user_tweets.html  fn.get_user_id.html  fn.main.html  sidebar-items.js  struct.Cli.html
docs/search.desc/quotes/: quotes-desc-0-.js
docs/trait.impl/clap_builder/derive/: trait.Args.js  trait.Parser.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.UnwindSafe.js
src/: main.rs
